# obs-gstreamer

./: CMakeLists.txt  gstreamer.c
